--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -1,13 +1,13 @@
 <div>
-  <div>
-    <span>{{current.city}}, {{current.country}} </span>
-    <span>{{current.date | date:'fullDate'}}</span>
+  <div *ngIf="current">
+    <span>{{current?.city}}, {{current?.country}} </span>
+    <span>{{current?.date | date:'fullDate'}}</span>
   </div>
   <div>
-    <img [src]='current.image'>
-    <span>{{current.temperature | number:'1.0-0'}}℉</span>
+    <img [src]='current?.image'>
+    <span>{{current?.temperature | number:'1.0-0'}}℉</span>
   </div>
   <div>
-    {{current.description}}
+    {{current?.description}}
   </div>
 </div>
