--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Roboto', sans-serif; }
+.content-margin {
+  margin-left: 8px;
+  margin-right: 8px;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
